--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -18,7 +18,7 @@
 
 #title {
    margin: 0;
-   margin-top: 8rem;
+   margin-top: 6rem;
    font-size: 45px;
 }
 
@@ -55,6 +55,7 @@
    border-radius: 27px;
    margin-top: 4rem;
    color: #4E4E4E;
+   margin-bottom: 4rem;
 }
 
 #about--innerMargin {
@@ -79,7 +80,7 @@
 }
 
 #technologies svg{
-   height: 5rem;
+   height: 4rem;
    margin-right: 1rem;
 }
 
@@ -92,9 +93,7 @@
    display: flex;
 }
 
-#profile__picture {
-   height: 100px;
-   width: 300px;
-   border-radius: 50%;
-   margin-right: 1rem;
+#profile p {
+   margin-top: 0;
+   margin-bottom: 4rem;
 }
