--- a/react-app/src/components/Journals/Journals.css
+++ b/react-app/src/components/Journals/Journals.css
@@ -1,7 +1,7 @@
 #journals {
    position: absolute;
-   width: 394px;
-   height: 690px;
+   width: 22rem;
+   height: 44rem;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 65px;
@@ -48,7 +48,7 @@
 }
 
 
-@media screen and (max-width: 1800px) {
+/* @media screen and (max-width: 1800px) {
    #journals {
       position: absolute;
       width: 200px;
@@ -60,4 +60,4 @@
       left: 8%;
    }
    
-}
+} */
