--- a/react-app/src/components/journal.css
+++ b/react-app/src/components/journal.css
@@ -1,10 +1,12 @@
 #journal {
-   width: 1158px;
-   height: 690px;
+   width: 74rem;
+   /* height: 690px; */
+   height: 44rem;
    border: 1px solid #707070;
    border-radius: 31px;
    margin-top: 65px;
    margin-left: 80px;
+   /* display:flex; */
    position:absolute;
    top:80px;
    right: 8%;
@@ -14,7 +16,7 @@
    color:#4E4E4E;
    text-decoration: none;
 }
-
+/* 
 @media screen and (min-width: 1960px) {
    #journal {
       width: 1260px;
@@ -83,4 +85,4 @@
       top:80px;
       right: 8%;
    }
-}
+} */
