--- a/react-app/src/components/journal.css
+++ b/react-app/src/components/journal.css
@@ -1,13 +1,16 @@
 #journal {
-   width: 74rem;
-   /* height: 690px; */
-   height: 44rem;
+   /* width: 74rem;
+   height: 44rem; */
+   height: 72vh;
+   width: 60vw;
    border: 1px solid #707070;
    border-radius: 31px;
-   margin-top: 65px;
-   margin-left: 80px;
-   /* display:flex; */
-   position:absolute;
+   position: absolute;
+   /* right:8%; */
+   /* margin-top: 65px;
+   margin-left: 80px; */
+   /* position:absolute; */
+   /* left: 30rem; */
    top:80px;
    right: 8%;
 }
